--- a/index.html
+++ b/index.html
@@ -676,8 +676,8 @@
                 <h3>Contact With us</h3>
                 <div class="contact-address">
                   <p>Centerville Road, DE 19808, US </p>
-                  <p class="phone">Phone: <span>(+94 123 456 789)</span></p>
-                  <p class="email">E-mail: <span>(contact@mate.com)</span></p>
+                  <p class="phone">Phone: <span>(+221 76 204 45 66)</span></p>
+                  <p class="email">E-mail: <span>(infos@sitmel.com)</span></p>
                 </div>
                 <div class="social-icons">
                   <ul>
