--- a/index.html
+++ b/index.html
@@ -673,9 +673,9 @@
           <div class="row">     
             <div class="col-lg-6 col-sm-6 col-xs-12">
               <div class="contact-us">
-                <h3>Contact With us</h3>
+                <h3>Nous Contacter :</h3>
                 <div class="contact-address">
-                  <p>Centerville Road, DE 19808, US </p>
+                  <p>Dakar, Parcelles Assainies U10 N50 </p>
                   <p class="phone">Phone: <span>(+221 76 204 45 66)</span></p>
                   <p class="email">E-mail: <span>(infos@sitmel.com)</span></p>
                 </div>
