--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
     <section id="services" class="section">
       <div class="container">
         <div class="section-header">          
-          <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Our Services</h2>
+          <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Nos Services</h2>
           <hr class="lines wow zoomIn" data-wow-delay="0.3s">
-          <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, dignissimos! <br> Lorem ipsum dolor sit amet, consectetur.</p>
+          <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">SITMEL est une société d’ingénierie spécialisée dans les études, la réalisation et la maintenance des installations électromécaniques. Nous intervenons sur des projets complexes, en garantissant performance, conformité réglementaire et efficacité énergétique, grâce à une expertise pointue en électricité, mécanique des fluides et automatisation.</p>
         </div>
         <div class="row">
           <div class="col-md-4 col-sm-6">
@@ -126,8 +126,14 @@
               <div class="icon">
                 <i class="lnr lnr-pencil"></i>
               </div>
-              <h4>Content Writing</h4>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
+              <h4>Études et Travaux Électriques</h4>
+              <p>•	Études de faisabilité (collecte de données, prédimensionnement, analyse technique et financière).<br/>
+                •	Études d'exécution (schémas électriques, notes de calcul, schémas d'implantation, etc.).<br/>
+                •	Montage de dossier d'appel d'offres, réponses aux AO, mémoires techniques, audit technique, etc.<br/>
+                •	Installation tertiaire (courant fort et courant faible).<br/>
+                •	Installations industrielles (installation MT, BT, automatisme et supervision).<br/>
+                •	Réseaux électriques et éclairage public.
+                </p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6">
