--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="collapse navbar-collapse" id="main-navbar">
             <ul class="navbar-nav mr-auto w-100 justify-content-end">
               <li class="nav-item">
-                <a class="nav-link page-scroll" href="#hero-area">Home</a>
+                <a class="nav-link page-scroll" href="#hero-area">Acceuil</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link page-scroll" href="#services">Services</a>
@@ -141,8 +141,11 @@
               <div class="icon">
                 <i class="lnr lnr-code"></i>
               </div>
-              <h4>Web Development</h4>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
+              <h4>Études et Travaux Mécaniques / Fluides</h4>
+              <p>•	Climatisation.<br/>
+                •	Plomberie sanitaire et industrielle.<br/>
+                •	Installation de machines.
+                </p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6">
@@ -150,8 +153,10 @@
               <div class="icon">
                 <i class="lnr lnr-mustache"></i>
               </div>
-              <h4>Business Consultancy</h4>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
+              <h4>Maintenance et Suivi des Installations</h4>
+              <p>•	Entretien et maintenance des installations électriques.<br/>
+                •	Entretien et maintenance des installations mécaniques.
+                </p>
             </div>
           </div>
         </div>
