--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div class="col-md-10">
             <div class="contents text-center">
               <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">SITMEL-SARL </h1>
-              <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Société d'ingénieurie, Travaux et Maintenance en Electromécanique. </p>
+              <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Société d'Ingénieurie, Travaux et Maintenance en Électromécanique. </p>
               <a href="#" class="btn btn-common wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms">Download</a>
             </div>
           </div>
