--- a/index.html
+++ b/index.html
@@ -253,14 +253,14 @@
               All
             </a>
             <a class="filter btn btn-common" data-filter=".design">
-              Installation Electrique et Machines pour Senn Innov Tek
+              Senn Innov Tek
             </a>
             <a class="filter btn btn-common" data-filter=".development">
-              Development
+              Senegal Numerique
             </a>
-            <a class="filter btn btn-common" data-filter=".print">
+            <!-- <a class="filter btn btn-common" data-filter=".print">
               Print
-            </a>
+            </a> -->
           </div>
           <!-- Portfolio Controller/Buttons Ends-->
         </div>
