--- a/index.html
+++ b/index.html
@@ -341,9 +341,7 @@
         <div class="col-lg-8">
           <div class="video-promo-content text-center">
             <h2 class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Watch Our Intro video</h2>
-            <p class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Aliquam vestibulum cursus felis. In
-              iaculis iaculis sapien ac condimentum. Vestibulum congue posuere lacus, id tincidunt nisi porta sit amet.
-              Suspendisse et sapien varius, pellentesque dui non, semper orci.</p>
+            <p class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Video en production.</p>
             <a href="https://www.youtube.com/watch?v=IXoMDwh4Cq8" class="video-popup wow fadeInUp"
               data-wow-duration="1000ms" data-wow-delay="0.3s"><i class="lnr lnr-film-play"></i></a>
           </div>
@@ -354,7 +352,7 @@
   <!-- End Video Promo Section -->
 
   <!-- Start Pricing Table Section -->
-  <div id="pricing" class="section pricing-section">
+  <!-- <div id="pricing" class="section pricing-section">
     <div class="container">
       <div class="section-header">
         <h2 class="section-title">Pricing Table</h2>
@@ -420,11 +418,11 @@
 
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- End Pricing Table Section -->
 
   <!-- Counter Section Start -->
-  <div class="counters section" data-stellar-background-ratio="0.5">
+  <!-- <div class="counters section" data-stellar-background-ratio="0.5">
     <div class="container">
       <div class="row">
         <div class="col-sm-6 col-md-3 col-lg-3">
@@ -473,7 +471,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- Counter Section End -->
 
   <!-- Team section Start -->
@@ -482,8 +480,7 @@
       <div class="section-header">
         <h2 class="section-title">Our Team</h2>
         <hr class="lines">
-        <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, dignissimos! <br>
-          Lorem ipsum dolor sit amet, consectetur.</p>
+        <p class="section-subtitle">SITMEL est constituée par des ingénieurs et techniciens en électromécaniques.</p>
       </div>
       <div class="row">
         <div class="col-lg-3 col-md-6 col-xs-12">
@@ -491,8 +488,8 @@
             <img src="img/team/team1.jpg" alt="">
             <div class="team-details">
               <div class="team-inner">
-                <h4 class="team-title">Jhon Doe</h4>
-                <p>Chief Technical Officer</p>
+                <h4 class="team-title">Saliou Wade</h4>
+                <p>Ingénieur en Electromécanique, Gérant</p>
                 <ul class="social-list">
                   <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
                   <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -508,8 +505,8 @@
             <img src="img/team/team2.jpg" alt="">
             <div class="team-details">
               <div class="team-inner">
-                <h4 class="team-title">Paul Kowalsy</h4>
-                <p>CEO & Co-Founder</p>
+                <h4 class="team-title">Saliou Diop</h4>
+                <p>Technicien en Electromécanique</p>
                 <ul class="social-list">
                   <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
                   <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -521,7 +518,7 @@
           </div>
         </div>
         <div class="col-lg-3 col-md-6 col-xs-12">
-          <div class="single-team">
+          <!-- <div class="single-team">
             <img src="img/team/team3.jpg" alt="">
             <div class="team-details">
               <div class="team-inner">
@@ -548,7 +545,7 @@
                   <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
                   <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
                   <li class="google-plus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                  <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                  <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li> -->
                 </ul>
               </div>
             </div>
@@ -568,13 +565,13 @@
             <div class="testimonial-item">
               <img src="img/testimonial/customer1.jpg" alt="Client Testimonoal" />
               <div class="testimonial-text">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. send do <br> adipisicing ciusmod tempor
-                  incididunt ut labore et</p>
-                <h3>Jone Deam</h3>
-                <span>Fondor of Jalmori</span>
+                <p>L'équipe de SITMEL est trés efficace dans la planification et l'execution de projets <br> 
+                  Bonne continuation</p>
+                <h3>Modou Gueye</h3>
+                <span>Directeur de Senn Innov TEK</span>
               </div>
             </div>
-            <div class="testimonial-item">
+            <!-- <div class="testimonial-item">
               <img src="img/testimonial/customer2.jpg" alt="Client Testimonoal" />
               <div class="testimonial-text">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. send do <br> adipisicing ciusmod tempor
@@ -598,7 +595,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. send do <br> adipisicing ciusmod tempor
                   incididunt ut labore et</p>
                 <h3>Paul Kowalsy</h3>
-                <span>CEO & Founder</span>
+                <span>CEO & Founder</span> -->
               </div>
             </div>
           </div>
@@ -611,7 +608,7 @@
   <!-- Blog Section -->
   <section id="blog" class="section">
     <!-- Container Starts -->
-    <div class="container">
+    <!-- <div class="container">
       <div class="section-header">
         <h2 class="section-title">Recent Blog</h2>
         <hr class="lines">
@@ -619,9 +616,9 @@
           Lorem ipsum dolor sit amet, consectetur.</p>
       </div>
       <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-item">
+        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-item"> -->
           <!-- Blog Item Starts -->
-          <div class="blog-item-wrapper">
+          <!-- <div class="blog-item-wrapper">
             <div class="blog-item-img">
               <a href="single-post.html">
                 <img src="img/blog/img1.jpg" alt="">
@@ -641,13 +638,13 @@
               </p>
               <a href="single-post.html" class="btn-rm">Read More <i class="lnr lnr-arrow-right"></i></a>
             </div>
-          </div>
+          </div> -->
           <!-- Blog Item Wrapper Ends-->
-        </div>
+        <!-- </div> -->
 
-        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-item">
+        <!-- <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-item"> -->
           <!-- Blog Item Starts -->
-          <div class="blog-item-wrapper">
+          <!-- <div class="blog-item-wrapper">
             <div class="blog-item-img">
               <a href="single-post.html">
                 <img src="img/blog/img2.jpg" alt="">
@@ -667,13 +664,13 @@
               </p>
               <a href="single-post.html" class="btn-rm">Read More <i class="lnr lnr-arrow-right"></i></a>
             </div>
-          </div>
+          </div> -->
           <!-- Blog Item Wrapper Ends-->
-        </div>
+        <!-- </div> -->
 
-        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-item">
+        <!-- <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-item"> -->
           <!-- Blog Item Starts -->
-          <div class="blog-item-wrapper">
+          <!-- <div class="blog-item-wrapper">
             <div class="blog-item-img">
               <a href="single-post.html">
                 <img src="img/blog/img3.jpg" alt="">
@@ -693,12 +690,12 @@
               </p>
               <a href="single-post.html" class="btn-rm">Read More <i class="lnr lnr-arrow-right"></i></a>
             </div>
-          </div>
+          </div> -->
           <!-- Blog Item Wrapper Ends-->
-        </div>
+        <!-- </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- blog Section End -->
 
   <!-- Contact Section Start -->
