--- a/index.html
+++ b/index.html
@@ -252,10 +252,10 @@
             <a class="filter active btn btn-common" data-filter="all">
               All
             </a>
-            <a class="filter btn btn-common" data-filter=".design">
+            <a class="filter btn btn-common" data-filter=".senninnovtec">
               Senn Innov Tek
             </a>
-            <a class="filter btn btn-common" data-filter=".development">
+            <a class="filter btn btn-common" data-filter=".senegalnumerique">
               Senegal Numerique
             </a>
             <!-- <a class="filter btn btn-common" data-filter=".print">
@@ -267,61 +267,101 @@
 
         <!-- Portfolio Recent Projects -->
         <div id="portfolio" class="row">
-          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix development print">
+          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix senninnovtec">
             <div class="portfolio-item">
               <div class="shot-item">
-                <img src="img/portfolio/img1.jpg" alt="" />
-                <a class="overlay lightbox" href="img/portfolio/img1.jpg">
+                <img src="img/portfolio/1_1.jpeg" alt="" />
+                <a class="overlay lightbox" href="img/portfolio/1_1.jpeg">
                   <i class="lnr lnr-eye item-icon"></i>
                 </a>
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix design print">
+          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix senninnovtec">
             <div class="portfolio-item">
               <div class="shot-item">
-                <img src="img/portfolio/img2.jpg" alt="" />
-                <a class="overlay lightbox" href="img/portfolio/img2.jpg">
+                <img src="img/portfolio/1_2.jpeg" alt="" />
+                <a class="overlay lightbox" href="img/portfolio/1_2.jpeg">
                   <i class="lnr lnr-eye item-icon"></i>
                 </a>
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix development">
+          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix senninnovtec">
             <div class="portfolio-item">
               <div class="shot-item">
-                <img src="img/portfolio/img3.jpg" alt="" />
-                <a class="overlay lightbox" href="img/portfolio/img3.jpg">
+                <img src="img/portfolio/1_3.jpeg" alt="" />
+                <a class="overlay lightbox" href="img/portfolio/1_3.jpeg">
                   <i class="lnr lnr-eye item-icon"></i>
                 </a>
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix development design">
+          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix senninnovtec">
             <div class="portfolio-item">
               <div class="shot-item">
-                <img src="img/portfolio/img4.jpg" alt="" />
-                <a class="overlay lightbox" href="img/portfolio/img4.jpg">
+                <img src="img/portfolio/1_4.jpeg" alt="" />
+                <a class="overlay lightbox" href="img/portfolio/1_4.jpeg">
                   <i class="lnr lnr-eye item-icon"></i>
                 </a>
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix development">
+          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix senninnovtec">
             <div class="portfolio-item">
               <div class="shot-item">
-                <img src="img/portfolio/img5.jpg" alt="" />
-                <a class="overlay lightbox" href="img/portfolio/img5.jpg">
+                <img src="img/portfolio/1_5.jpeg" alt="" />
+                <a class="overlay lightbox" href="img/portfolio/1_5.jpeg">
                   <i class="lnr lnr-eye item-icon"></i>
                 </a>
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix print design">
+          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix senegalnumerique">
             <div class="portfolio-item">
               <div class="shot-item">
-                <img src="img/portfolio/img6.jpg" alt="" />
-                <a class="overlay lightbox" href="img/portfolio/img6.jpg">
+                <img src="img/portfolio/2_1.jpeg" alt="" />
+                <a class="overlay lightbox" href="img/portfolio/2_1.jpeg">
+                  <i class="lnr lnr-eye item-icon"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix senegalnumerique">
+            <div class="portfolio-item">
+              <div class="shot-item">
+                <img src="img/portfolio/2_2.jpeg" alt="" />
+                <a class="overlay lightbox" href="img/portfolio/2_2.jpeg">
+                  <i class="lnr lnr-eye item-icon"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix senegalnumerique">
+            <div class="portfolio-item">
+              <div class="shot-item">
+                <img src="img/portfolio/2_3.jpeg" alt="" />
+                <a class="overlay lightbox" href="img/portfolio/2_3.jpeg">
+                  <i class="lnr lnr-eye item-icon"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix senegalnumerique">
+            <div class="portfolio-item">
+              <div class="shot-item">
+                <img src="img/portfolio/2_4.jpeg" alt="" />
+                <a class="overlay lightbox" href="img/portfolio/2_4.jpeg">
+                  <i class="lnr lnr-eye item-icon"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix senegalnumerique">
+            <div class="portfolio-item">
+              <div class="shot-item">
+                <img src="img/portfolio/2_5.jpeg" alt="" />
+                <a class="overlay lightbox" href="img/portfolio/2_5.jpeg">
                   <i class="lnr lnr-eye item-icon"></i>
                 </a>
               </div>
