--- a/index.html
+++ b/index.html
@@ -49,20 +49,20 @@
               <a class="nav-link page-scroll" href="#services">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link page-scroll" href="#features">Features</a>
+              <a class="nav-link page-scroll" href="#features">Qualités</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link page-scroll" href="#portfolios">Works</a>
+              <a class="nav-link page-scroll" href="#portfolios">Réalisations</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link page-scroll" href="#pricing">Pricing</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link page-scroll" href="#team">Team</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link page-scroll" href="#blog">Blog</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link page-scroll" href="#contact">Contact</a>
             </li>
@@ -241,7 +241,7 @@
     <!-- Container Starts -->
     <div class="container">
       <div class="section-header">
-        <h2 class="section-title">Nos realisations :</h2>
+        <h2 class="section-title">Nos réalisations </h2>
         <hr class="lines">
         <p class="section-subtitle">créée en 2025 SITMEL a eu à realiser des projets structurants dans le domaine de l'energie 
       </div>
