--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
               <i class="lnr lnr-pencil"></i>
             </div>
             <h4>Études et Travaux Électriques</h4>
-            <p>• Études de faisabilité (collecte de données, prédimensionnement, analyse technique et financière).<br />
-              • Études d'exécution (schémas électriques, notes de calcul, schémas d'implantation, etc.).<br />
+            <p>• Études de faisabilité .<br />
+              • Études d'exécution .<br />
               • Montage de dossier d'appel d'offres, réponses aux AO, mémoires techniques, audit technique, etc.<br />
-              • Installation tertiaire (courant fort et courant faible).<br />
+              • Installation tertiaire .<br />
               • Installations industrielles (installation MT, BT, automatisme et supervision).<br />
               • Réseaux électriques et éclairage public.
             </p>
@@ -226,10 +226,10 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-xs-12">
+        <!-- <div class="col-lg-4 col-xs-12">
           <div class="show-box">
             <img class="img-fulid" src="img/features/feature.png" alt="">
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
