--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
   <!-- End Video Promo Section -->
 
   <!-- Start Pricing Table Section -->
-  <!-- <div id="pricing" class="section pricing-section">
+  <div id="pricing" class="section pricing-section">
     <div class="container">
       <div class="section-header">
         <h2 class="section-title">Pricing Table</h2>
@@ -458,11 +458,11 @@
 
       </div>
     </div>
-  </div> -->
+  </div>
   <!-- End Pricing Table Section -->
 
   <!-- Counter Section Start -->
-  <!-- <div class="counters section" data-stellar-background-ratio="0.5">
+  <div class="counters section" data-stellar-background-ratio="0.5">
     <div class="container">
       <div class="row">
         <div class="col-sm-6 col-md-3 col-lg-3">
@@ -511,7 +511,7 @@
         </div>
       </div>
     </div>
-  </div> -->
+  </div> 
   <!-- Counter Section End -->
 
   <!-- Team section Start -->
@@ -558,7 +558,7 @@
           </div>
         </div>
         <div class="col-lg-3 col-md-6 col-xs-12">
-          <!-- <div class="single-team">
+          <div class="single-team">
             <img src="img/team/team3.jpg" alt="">
             <div class="team-details">
               <div class="team-inner">
@@ -585,7 +585,7 @@
                   <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
                   <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
                   <li class="google-plus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                  <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li> -->
+                  <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
               </div>
             </div>
@@ -611,7 +611,7 @@
                 <span>Directeur de Senn Innov TEK</span>
               </div>
             </div>
-            <!-- <div class="testimonial-item">
+            <div class="testimonial-item">
               <img src="img/testimonial/customer2.jpg" alt="Client Testimonoal" />
               <div class="testimonial-text">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. send do <br> adipisicing ciusmod tempor
@@ -635,7 +635,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. send do <br> adipisicing ciusmod tempor
                   incididunt ut labore et</p>
                 <h3>Paul Kowalsy</h3>
-                <span>CEO & Founder</span> -->
+                <span>CEO & Founder</span>
               </div>
             </div>
           </div>
@@ -648,7 +648,7 @@
   <!-- Blog Section -->
   <section id="blog" class="section">
     <!-- Container Starts -->
-    <!-- <div class="container">
+    <div class="container">
       <div class="section-header">
         <h2 class="section-title">Recent Blog</h2>
         <hr class="lines">
@@ -658,7 +658,7 @@
       <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-item"> -->
           <!-- Blog Item Starts -->
-          <!-- <div class="blog-item-wrapper">
+          <div class="blog-item-wrapper">
             <div class="blog-item-img">
               <a href="single-post.html">
                 <img src="img/blog/img1.jpg" alt="">
@@ -680,11 +680,11 @@
             </div>
           </div> -->
           <!-- Blog Item Wrapper Ends-->
-        <!-- </div> -->
+        </div>
 
-        <!-- <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-item"> -->
+        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-item"> -->
           <!-- Blog Item Starts -->
-          <!-- <div class="blog-item-wrapper">
+          <div class="blog-item-wrapper">
             <div class="blog-item-img">
               <a href="single-post.html">
                 <img src="img/blog/img2.jpg" alt="">
@@ -704,13 +704,13 @@
               </p>
               <a href="single-post.html" class="btn-rm">Read More <i class="lnr lnr-arrow-right"></i></a>
             </div>
-          </div> -->
+          </div>
           <!-- Blog Item Wrapper Ends-->
-        <!-- </div> -->
+        </div>
 
-        <!-- <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-item"> -->
-          <!-- Blog Item Starts -->
-          <!-- <div class="blog-item-wrapper">
+        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-item">
+          Blog Item Starts
+          <div class="blog-item-wrapper">
             <div class="blog-item-img">
               <a href="single-post.html">
                 <img src="img/blog/img3.jpg" alt="">
@@ -730,12 +730,12 @@
               </p>
               <a href="single-post.html" class="btn-rm">Read More <i class="lnr lnr-arrow-right"></i></a>
             </div>
-          </div> -->
+          </div>
           <!-- Blog Item Wrapper Ends-->
-        <!-- </div>
+        </div>
       </div>
     </div>
-  </section> -->
+  </section>
   <!-- blog Section End -->
 
   <!-- Contact Section Start -->
